<resources>
    <string name="app_name">ProjetoCM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tarefa">Tarefas</string>
    <string name="menu_projetos">Projetos</string>
    <string name="menu_gestores">Gestores</string>
    <string name="menu_login">Login</string>
    <string name="login_iniciar">Iniciar Sessão</string>
    <string name="login_registo">Se não tem conta, clique aqui</string>
    <string name="registo">Registe-se</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registar">Registar</string>
    <string name="logout">Logout</string>
    <string name="menu_logout">Logout</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="avaliacao">Avaliação</string>
    <string name="projeto_nome">Projeto Teste</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voltar_para_a_tela_anterior">Voltar para a tela anterior</string>
</resources>