<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray"
    tools:context=".ui.registo.RegistoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title_registo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registo"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/title_registo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        style="@style/Edit_Text"
        android:id="@+id/id_nome"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"/>

    <EditText
        style="@style/Edit_Text"
        android:id="@+id/id_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/id_nome"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"/>

    <EditText
        style="@style/Edit_Text"
        android:id="@+id/id_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/id_email"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:id="@+id/btn_registo"
        android:text="@string/registar"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>